# structa

./: .gitignore  Makefile  README.rst  coverage.cfg  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: Makefile  api.rst  api_analyzer.rst  api_chars.rst  api_collections.rst  api_conversions.rst  api_errors.rst  api_format.rst  api_source.rst  api_types.rst  api_xml.rst  changelog.rst  conf.py  development.rst  index.rst  install.rst  license.rst  manual.rst  previewer.py  quickstart.rst  recipes.rst  tutorial.rst  tutorial_basic.rst  tutorial_real.rst
docs/_static/: style_override.css
docs/_templates/: layout.html
docs/examples/: air-quality-bad.py  air-quality-multi.py  air-quality-opt.py  air-quality.py  bad-nums.py  bad-types.py  merge-dicts.py  mergetest.py  mostly-blank.py  simple-fields.py  str-nums.py
docs/images/: types.dot
scripts/: class_graph
structa/: __init__.py  analyzer.py  chars.py  collections.py  conversions.py  duration.py  errors.py  format.py  patterns.py  source.py  types.py  ui.py  xml.py
structa/ui/: __init__.py  cli.py  cli.xsl  progress.py
tests/: test_analyzer.py  test_chars.py  test_cli.py  test_collections.py  test_conversions.py  test_duration.py  test_format.py  test_patterns.py  test_progress.py  test_source.py  test_types.py  test_ui.py  test_xml.py
