# coding: utf-8
[metadata]
name = structa
version = 0.1
description = Analyzes data files for common structures
long_description = file: README.rst
author = Dave Jones
author_email = dave@waveform.org.uk
project_urls =
    Documentation = https://structa.readthedocs.io/
    Source Code = https://github.com/waveform80/structa
    Issue Tracker = https://github.com/waveform80/structa/issues
keywords = json yaml xml csv analyzer
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    setuptools
    lxml
    chardet
    humanize
    blessings
    python-dateutil

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
    pkginfo
yaml =
    ruamel.yaml

[options.entry_points]
console_scripts =
    structa = structa.ui.cli:main

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = structa
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False
