# coding: utf-8
[metadata]
name = structa
version = 0.4
description = Analyzes data files for common structures
long_description = file: README.rst
author = Dave Jones
author_email = dave@waveform.org.uk
project_urls =
    Documentation = https://structa.readthedocs.io/
    Source Code = https://github.com/waveform80/structa
    Issue Tracker = https://github.com/waveform80/structa/issues
keywords = json yaml csv data analysis
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.5
install_requires =
    setuptools
    lxml
    chardet
    blessings
    tqdm
    python-dateutil

[options.package_data]
structa.ui =
    *.xsl

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
    sphinx-rtd-theme
yaml =
    ruamel.yaml

[options.entry_points]
console_scripts =
    structa = structa.ui.cli:main

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = structa
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False

[copyrights:settings]
include =
    **/*.py
    **/*.rst
exclude =
    docs/examples/*.py
    docs/license.rst
license = LICENSE.txt
preamble =
    structa: an application for analyzing repetitive data structures
strip-preamble = false

[class_graph:settings]
abstract =
    Type
    Container
    Scalar
    Repr
omit =
    object
source =
    structa/*.py

[previewer:settings]
command = make -C docs html
html = build/html
watch =
    structa/*.py
    docs/*.rst
    docs/examples/*.py
    docs/_templates/*.html
    docs/_static/*
